--- a/showcase/src/main/res/layout/activity_main.xml
+++ b/showcase/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,10 +9,11 @@
     >
 
   <TextView
+      android:id="@+id/hello_message"
       android:layout_width="wrap_content"
       android:layout_height="36dp"
       android:layout_marginBottom="8dp"
-      android:text="My first Android app on Store."
+      android:text="@string/hello_message"
       android:textAlignment="center"
       android:textAppearance="@style/TextAppearance.AppCompat.Medium"
       android:textStyle="bold"
@@ -24,4 +25,4 @@
       app:layout_constraintVertical_bias="0.258"
       />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
